--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "next": "13.2.4",
+    "prettier": "^2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "typescript": "5.0.2"
   }
